Bug 77521 - radeon: Horizontal lines of semi-random contents are sometimes displayed
Summary: radeon: Horizontal lines of semi-random contents are sometimes displayed
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - non Intel) (show other bugs)
Hardware: x86-64 Linux
: P1 normal
Assignee: drivers_video-dri
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-08 19:54 UTC by Martin Andersson
Modified: 2014-07-06 23:04 UTC (History)
0 users

See Also:
Kernel Version: drm-next-3.16-wip
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg (226.19 KB, application/octet-stream)
2014-06-08 19:54 UTC, Martin Andersson
Details
Move fb update from radeon_flip_work_func() to radeon_crtc_page_flip() (844 bytes, patch)
2014-06-09 05:55 UTC, Michel Dänzer
Details | Diff

Description Martin Andersson 2014-06-08 19:54:05 UTC
Created attachment 138491 [details]
dmesg

I checked out http://cgit.freedesktop.org/~agd5f/linux/log/?h=drm-next-3.16-wip (latest commit: 2472aac90b339e7abc186b615bcf533463b4c63a) and noticed that sometimes 2-3 cm wide horizontal lines would show up on the screen. They would only stay for a fraction of a second, before disappearing again. It's quite easy to trigger them by using the gnome expose function (the window overview). But they don't show up if I just let the computer idle at the desktop. I have a radeon 6950.

I bisected the issue to this commit:
fa7f517cb26eb1a1a1f0baffcced39f6c3ec3337 drm/radeon: rework page flip handling v4

I also noticed the following message (which is repeated multiple times):

[ 8346.287462] WARNING: CPU: 1 PID: 342 at drivers/gpu/drm/drm_crtc.c:4315 drm_mode_page_flip_ioctl+0x2fd/0x320 [drm]()
[ 8346.287464] Modules linked in: fuse snd_hda_codec_realtek snd_hda_codec_generic radeon i2c_algo_bit drm_kms_helper ttm iTCO_wdt iTCO_vendor_support snd_hda_codec_hdmi drm eeepc_wmi nls_cp437 asus_wmi sparse_keymap mxm_wmi vfat fat x86_pkg_temp_thermal intel_powerclamp coretemp kvm_intel evdev kvm crct10dif_pclmul crct10dif_common crc32_pclmul ecb btusb ghash_clmulni_intel bluetooth aesni_intel crc16 aes_x86_64 glue_helper lrw rfkill gf128mul ablk_helper cryptd microcode psmouse serio_raw pcspkr i2c_i801 lpc_ich i2c_core mfd_core fan snd_hda_intel snd_hda_controller snd_hda_codec snd_hwdep snd_pcm snd_timer video thermal snd e1000e mei_me ptp mei pps_core shpchp wmi soundcore processor button btrfs xor raid6_pq sr_mod cdrom sd_mod hid_generic usbhid hid ehci_pci ahci libahci xhci_hcd ehci_hcd libata
[ 8346.287529]  firewire_ohci crc32c_intel firewire_core crc_itu_t scsi_mod usbcore usb_common
[ 8346.287538] CPU: 1 PID: 342 Comm: Xorg Tainted: G        W     3.15.0-rc8-ARCH+ #12
[ 8346.287540] Hardware name: System manufacturer System Product Name/P8P67 PRO, BIOS 3602 11/01/2012
[ 8346.287542]  0000000000000009 ffff88020e96fd08 ffffffff814ecc2a 0000000000000000
[ 8346.287546]  ffff88020e96fd40 ffffffff81065e0d ffff88020e96fdf8 ffff880211958068
[ 8346.287550]  ffff88020a67cd80 ffff880211958018 0000000000000000 ffff88020e96fd50
[ 8346.287554] Call Trace:
[ 8346.287561]  [<ffffffff814ecc2a>] dump_stack+0x4d/0x6f
[ 8346.287566]  [<ffffffff81065e0d>] warn_slowpath_common+0x7d/0xa0
[ 8346.287569]  [<ffffffff81065eea>] warn_slowpath_null+0x1a/0x20
[ 8346.287577]  [<ffffffffa0f1fffd>] drm_mode_page_flip_ioctl+0x2fd/0x320 [drm]
[ 8346.287583]  [<ffffffffa0f0ea7b>] drm_ioctl+0x1db/0x5f0 [drm]
[ 8346.287591]  [<ffffffffa0f1fd00>] ? drm_mode_gamma_get_ioctl+0xf0/0xf0 [drm]
[ 8346.287602]  [<ffffffffa0fb104c>] radeon_drm_ioctl+0x4c/0x80 [radeon]
[ 8346.287607]  [<ffffffff811c6b48>] do_vfs_ioctl+0x2c8/0x4b0
[ 8346.287612]  [<ffffffff811d0dde>] ? __fget+0x6e/0xb0
[ 8346.287615]  [<ffffffff811c6db1>] SyS_ioctl+0x81/0xa0
[ 8346.287619]  [<ffffffff814fb16d>] system_call_fastpath+0x1a/0x1f
[ 8346.287622] ---[ end trace 7f747cd881a3fb9e ]---
Comment 1 Michel Dänzer 2014-06-09 05:55:16 UTC
Created attachment 138561 [details]
Move fb update from radeon_flip_work_func() to radeon_crtc_page_flip()

This (untested) patch should fix at least the warnings in dmesg, not sure about the visual artifacts though.
Comment 2 Martin Andersson 2014-06-09 17:28:31 UTC
(In reply to Michel Dänzer from comment #1)
> Created attachment 138561 [details]
> Move fb update from radeon_flip_work_func() to radeon_crtc_page_flip()
> 
> This (untested) patch should fix at least the warnings in dmesg, not sure
> about the visual artifacts though.

Yep, the warnings are now gone, but the artifacts are still there
Comment 3 Martin Andersson 2014-07-06 23:04:57 UTC
Tested the latest 3.16-rc4 and the artifacts are now gone.

Note You need to log in before you can comment on or make changes to this bug.